manifests/llama-cpp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp
  namespace: llama-cpp
  labels:
    app.kubernetes.io/managed-by: ngarvey-homelab
spec:
  selector:
    app: llama-cpp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
